<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:text="UsernamePH"
        android:textAlignment="center"
        android:textColor="#100F0F"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/view_profile_btn"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:text="View Profile"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back,"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/searchExperiments_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#03A9F4"
        android:drawableLeft="@android:drawable/ic_search_category_default"
        android:drawableTint="@color/white"
        android:text="Search Experiments"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn" />

    <Button
        android:id="@+id/viewExperiments_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#9F76E8"
        android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
        android:drawableTint="@color/white"
        android:text="View Experiments"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn" />

    <Button
        android:id="@+id/scanBarcode_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00BCD4"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawableTint="@color/white"
        android:text="Scan Barcode"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addExperiment_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#4CAF50"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:drawableTint="@color/white"
        android:text="New Experiment"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/searchUsers_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchExperiments_btn" />

    <Button
        android:id="@+id/searchUsers_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F44336"
        android:drawableLeft="@android:drawable/ic_menu_myplaces"
        android:drawableTint="@color/white"
        android:text="Search Users"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewSubscriptions_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFB03C"
        android:drawableLeft="@android:drawable/btn_star"
        android:drawableTint="@color/white"
        android:text="View Subscriptions"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/scanBarcode_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewExperiments_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>